k8s/mysql-employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-employee
spec:
  selector:
    matchLabels:
      component: mysql-employee
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: mysql-employee
    spec:
      containers:
      - image: mysql
        name: mysql-employee
        ports:
        - containerPort: 3306
          name: mysql-employee
        volumeMounts:
        - name: mysql-employee-persistent-storage
          mountPath: /var/lib/mysql-employee
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-employee-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-employee-pv-claim
      - name: initdb
        configMap:
          name: mysql-employee-config
