k8s/mysql-oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-oauth
spec:
  selector:
    matchLabels:
      component: mysql-oauth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: mysql-oauth
    spec:
      containers:
      - image: mysql
        name: mysql-oauth
        ports:
        - containerPort: 3306
          name: mysql-oauth
        volumeMounts:
        - name: mysql-oauth-persistent-storage
          mountPath: /var/lib/mysql-oauth
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-oauth-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-oauth-pv-claim
      - name: initdb
        configMap:
          name: mysql-oauth-config
