k8s/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: oauth-service
  template:
    metadata:
      labels:
        component: oauth-service
    spec:
      containers:
        - name: oauth
          image: jbuilder1993/oauth-service:4.0
          ports:
            - containerPort: 5000
