k8s/employee-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  type: ClusterIP
  selector:
    component: employee-service
  ports:
    - port: 3000
      targetPort: 3000
