k8s/mysql-employee-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-employee-service
spec:
  type: ClusterIP
  selector:
    component: mysql-employee
  ports:
    - port: 3306
      targetPort: 3306
