k8s/mysql-oauth-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-oauth-service
spec:
  type: ClusterIP
  selector:
    component: mysql-oauth
  ports:
    - port: 3306
      targetPort: 3306
