k8s/users-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-ip-service
spec:
  type: ClusterIP
  selector:
    component: user-service
  ports:
    - port: 9888
      targetPort: 9888
