k8s/users2-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user2-ip-service
spec:
  type: ClusterIP
  selector:
    component: user2-service
  ports:
    - port: 8081
      targetPort: 8080
