k8s/users-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress-service
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /users
            backend:
              serviceName: user-ip-service
              servicePort: 9888
          - path: /user
            backend:
              serviceName: user2-ip-service
              servicePort: 8080
          - path: /oauth(/|$)(.*)
            backend:
              serviceName: oauth-service
              servicePort: 5000
          - path: /employee(/|$)(.*)
            backend:
              serviceName: employee-service
              servicePort: 3000
